--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: python
 python:
   - 2.7
 install:
-  - pip install flake8 yapf
+  - pip install flake8
+  - pip install yapf==0.26.0
 
 services:
   - docker
