--- a/requirements.txt
+++ b/requirements.txt
@@ -38,4 +38,4 @@ enum34==1.1.6
 validators==0.14.2
 -e git+https://github.com/goodrain/market-api-python.git#egg=rainbond_market_client
 -e git+http://pull-code:gr123465!!@git.goodrain.com/goodrain/enterprise-server-python.git#egg=enterprise_server
--e git+http://zhaoxs:45396622zxs@git.goodrain.com/zhaoxs/appstore-sdk.git#egg=appstore_server
+-e git+http://pull-code:gr123465!!@git.goodrain.com/zhaoxs/appstore-sdk.git#egg=appstore_server
