--- a/www/static/www/weavescope-src/package.json
+++ b/www/static/www/weavescope-src/package.json
@@ -9,14 +9,16 @@
   "dependencies": {
     "babel-plugin-lodash": "3.2.11",
     "babel-polyfill": "6.23.0",
-    "classnames": "2.2.5",
-    "d3-array": "1.2.0",
-    "d3-color": "1.0.3",
-    "d3-format": "1.2.0",
+    "classnames": "2.2.6",
+    "d3-array": "2.3.1",
+    "d3-color": "1.3.0",
+    "d3-format": "1.3.2",
     "d3-scale": "1.0.5",
-    "d3-selection": "1.0.5",
-    "d3-shape": "1.0.6",
-    "d3-time-format": "2.0.5",
+    "d3-selection": "1.3.2",
+    "d3-shape": "1.3.5",
+    "d3-time-format": "2.1.3",
+    "d3-transition": "1.0.4",
+    "d3-drag": "1.0.4",
     "d3-zoom": "1.1.4",
     "dagre": "0.7.4",
     "debug": "2.6.6",
@@ -24,7 +26,7 @@
     "font-awesome": "4.7.0",
     "immutable": "3.8.1",
     "lcp": "1.1.0",
-    "lodash": "4.17.4",
+    "lodash": "4.17.15",
     "materialize-css": "0.98.1",
     "moment": "2.18.1",
     "page": "1.7.1",
