--- a/requirements.txt
+++ b/requirements.txt
@@ -36,5 +36,6 @@ python-gitlab==1.13.0
 PyGithub==1.44.1
 enum34==1.1.6
 validators==0.14.2
+deprecated==1.2.10
 -e git+https://github.com/goodrain/market-api-python.git#egg=rainbond_market_client
 -e git+https://github.com/goodrain/appstore-sdk-python.git#egg=appstore_server
