--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -9,11 +9,14 @@ ADD . /app/ui
 WORKDIR /app/ui
 
 RUN apk update -y && apk add -y git mysql-client && cp /app/ui/hack/Shanghai /usr/share/zoneinfo/Asia/Shanghai \
-      && chmod +x /app/ui/entrypoint.sh &&  \
-      mv /dist/index.html /app/ui/www/templates/index.html && \
-      rm -rf /app/ui/www/static/dists/* && \
-      cp -a /dist/* /app/ui/www/static/dists/ && \
-      rm -rf /dist \
+      && chmod +x /app/ui/entrypoint.sh  \
+      && mkdir -p /app/ui/bin/linux \
+      && chmod +x promql-parser \
+      && mv promql-parser /app/ui/bin/linux \
+      && mv /dist/index.html /app/ui/www/templates/index.html \
+      && rm -rf /app/ui/www/static/dists/* \
+      && cp -a /dist/* /app/ui/www/static/dists/ \
+      && rm -rf /dist \
       && mkdir /app/logs \
       && pip install -r requirements.txt \
       && cp -a /usr/lib/libmysqlclient.so.18* /tmp/ \
