--- a/console/services/plugin/default_config.json
+++ b/console/services/plugin/default_config.json
@@ -524,7 +524,7 @@
     ]
   },
   "mysqld_exporter": {
-    "plugin_alias": "MySQL 指标插件",
+    "plugin_alias": "MySQLD Exporter",
     "desc": "用于暴露 MySQL 的 Prometheus 指标",
     "category": "exporter-plugin",
     "code_repo": "",
