--- a/.github/workflows/commit-ci-build.yml
+++ b/.github/workflows/commit-ci-build.yml
@@ -33,4 +33,4 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOMESTIC_DOCKER_PASSWORD: ${{ secrets.DOMESTIC_DOCKER_PASSWORD }}
           DOMESTIC_DOCKER_USERNAME: ${{ secrets.DOMESTIC_DOCKER_USERNAME }}
-        run: VERSION=${{ steps.extract_branch.outputs.branch }}-dev ./travis_build.sh
+        run: VERSION=${{ steps.extract_branch.outputs.branch }}-dev ./release.sh
