--- a/.github/workflows/release-ci-build.yml
+++ b/.github/workflows/release-ci-build.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Build the Docker image
         env:
+          TRAVIS_PULL_REQUEST: false
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOMESTIC_DOCKER_PASSWORD: ${{ secrets.DOMESTIC_DOCKER_PASSWORD }}
