--- a/.github/workflows/pr-ci-build.yml
+++ b/.github/workflows/pr-ci-build.yml
@@ -15,8 +15,8 @@ jobs:
           python-version: 3.6
       - name: Install dependencies
         run: |
-          python -m pip3 install --upgrade pip
-          pip3 install flake8 yapf==0.26.0
+          python -m pip install --upgrade pip
+          pip install flake8 yapf==0.26.0
 
       - name: check-code
         run: ./check_code.sh
