--- a/rainbond.conf
+++ b/rainbond.conf
@@ -5,6 +5,8 @@ command=/app/ui/entrypoint.sh
 user=root
 autostart=true
 autorestart=true
+stdout_logfile=/app/logs/console.log
+stderr_logfile=/app/logs/console_error.log
 
 [program:cloudadaptor]
 priority=20
@@ -14,3 +16,4 @@ user=root
 autostart=true
 autorestart=true
 stdout_logfile=/app/logs/cloudadaptor.log
+stderr_logfile=/app/logs/cloudadaptor_error.log
