--- a/Dockerfile.allinone
+++ b/Dockerfile.allinone
@@ -50,6 +50,7 @@ ENV DB_PATH=/app/data/cloudadaptor
 ENV CHART_PATH=/app/chart
 ENV CONFIG_DIR=/app/data/cloudadaptor
 ENV HELM_PATH=/usr/local/bin/helm
+ENV MYSQL_DB=console
 
 VOLUME /app/data
 VOLUME /app/logs
