--- a/.github/workflows/release-ci-build.yml
+++ b/.github/workflows/release-ci-build.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: get tag
         id: vars
-        run: echo ::set-output name=tag::${GITHUB_REF:10}
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
 
       - name: Build the Docker image
         env:
@@ -33,4 +33,4 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOMESTIC_DOCKER_PASSWORD: ${{ secrets.DOMESTIC_DOCKER_PASSWORD }}
           DOMESTIC_DOCKER_USERNAME: ${{ secrets.DOMESTIC_DOCKER_USERNAME }}
-        run: VERSION=${{ steps.vars.outputs.tag }} ./release.sh
+        run: VERSION=${{ steps.vars.outputs.VERSION }} ./release.sh
