--- a/.github/workflows/release-ci-build.yml
+++ b/.github/workflows/release-ci-build.yml
@@ -22,10 +22,6 @@ jobs:
       - name: check-code
         run: ./check_code.sh
 
-      - name: get tag
-        id: vars
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-
       - name: Build the Docker image
         env:
           TRAVIS_PULL_REQUEST: false
@@ -33,4 +29,4 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOMESTIC_DOCKER_PASSWORD: ${{ secrets.DOMESTIC_DOCKER_PASSWORD }}
           DOMESTIC_DOCKER_USERNAME: ${{ secrets.DOMESTIC_DOCKER_USERNAME }}
-        run: VERSION=${{ steps.vars.outputs.VERSION }} ./release.sh
+        run: VERSION=v5.3.0-release ./release.sh allinone
