--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -1,4 +1,7 @@
-FROM rainbond/rainbond-ui:VERSION
+ARG VERSION=V5.2-dev
+ARG RELEASE_DESC=V5.2.2
+
+FROM rainbond/rainbond-ui:${VERSION}
 
 LABEL author="zengqg@goodrain.com" 
 
@@ -8,7 +11,7 @@ ADD . /app/ui
 
 WORKDIR /app/ui
 
-RUN apk update -y && apk add -y git mysql-client && cp /app/ui/hack/Shanghai /usr/share/zoneinfo/Asia/Shanghai \
+RUN apk update && apk add git mysql-client && cp /app/ui/hack/Shanghai /usr/share/zoneinfo/Asia/Shanghai \
       && chmod +x /app/ui/entrypoint.sh &&  \
       mv /dist/index.html /app/ui/www/templates/index.html && \
       rm -rf /app/ui/www/static/dists/* && \
@@ -29,7 +32,7 @@ RUN apk update -y && apk add -y git mysql-client && cp /app/ui/hack/Shanghai /us
 
 ENV PORT 7070
 ENV IS_OPEN_API=true
-ENV RELEASE_DESC=__RELEASE_DESC__
+ENV RELEASE_DESC=${RELEASE_DESC}
 
 VOLUME /initdata
 VOLUME /app/logs
