--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -16,22 +16,22 @@ ENV PYTHON_VERSION 2.7.9
 
 RUN set -ex \
 	apk --no-cache add --virtual build-dependencies \
-      build-base \
-      gcc \
-      libc-dev \
-      libffi-dev \
-# https://github.com/gliderlabs/docker-alpine/issues/181
+	build-base \
+	gcc \
+	libc-dev \
+	libffi-dev \
+	# https://github.com/gliderlabs/docker-alpine/issues/181
 	&& apk add --no-cache --virtual .fetch-deps \
-		gnupg \
-		openssl \
-		tar \
-		xz \
+	gnupg \
+	openssl \
+	tar \
+	xz \
 	\
 	&& wget -O python.tar.xz "https://www.python.org/ftp/python/${PYTHON_VERSION%%[a-z]*}/Python-$PYTHON_VERSION.tar.xz" \
 	&& wget -O python.tar.xz.asc "https://www.python.org/ftp/python/${PYTHON_VERSION%%[a-z]*}/Python-$PYTHON_VERSION.tar.xz.asc" \
 	&& export GNUPGHOME="$(mktemp -d)" \
 	&& (gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$GPG_KEY" || gpg --keyserver pgp.mit.edu --recv-keys "$GPG_KEY" \
-  	|| gpg --keyserver keyserver.pgp.com --recv-keys "$GPG_KEY" ) \
+	|| gpg --keyserver keyserver.pgp.com --recv-keys "$GPG_KEY" ) \
 	&& gpg --batch --verify python.tar.xz.asc python.tar.xz \
 	&& rm -rf "$GNUPGHOME" python.tar.xz.asc \
 	&& mkdir -p /usr/src/python \
@@ -39,54 +39,56 @@ RUN set -ex \
 	&& rm python.tar.xz \
 	\
 	&& apk add --no-cache --virtual .build-deps  \
-		bzip2-dev \
-		coreutils \
-		dpkg-dev dpkg \
-		gcc \
-		gdbm-dev \
-		libc-dev \
-		linux-headers \
-		make \
-		ncurses-dev \
-		openssl \
-		openssl-dev \
-		pax-utils \
-		readline-dev \
-		sqlite-dev \
-		tcl-dev \
-		tk \
-		tk-dev \
-		zlib-dev \
-# add build deps before removing fetch deps in case there's overlap
+	bzip2-dev \
+	coreutils \
+	dpkg-dev dpkg \
+	gcc \
+	gdbm-dev \
+	libc-dev \
+	linux-headers \
+	make \
+	ncurses-dev \
+	openssl \
+	openssl-dev \
+	libressl-dev \
+	musl-dev \
+	pax-utils \
+	readline-dev \
+	sqlite-dev \
+	tcl-dev \
+	tk \
+	tk-dev \
+	zlib-dev \
+	# add build deps before removing fetch deps in case there's overlap
 	&& apk del .fetch-deps \
 	\
 	&& cd /usr/src/python \
 	&& gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)" \
 	&& ./configure \
-		--build="$gnuArch" \
-		--enable-shared \
-		--enable-unicode=ucs4 \
+	--build="$gnuArch" \
+	--enable-shared \
+	--enable-unicode=ucs4 \
 	&& make -j "$(nproc)" \
-# set thread stack size to 1MB so we don't segfault before we hit sys.getrecursionlimit()
-# https://github.com/alpinelinux/aports/commit/2026e1259422d4e0cf92391ca2d3844356c649d0
-		EXTRA_CFLAGS="-DTHREAD_STACK_SIZE=0x100000" \
+	# set thread stack size to 1MB so we don't segfault before we hit sys.getrecursionlimit()
+	# https://github.com/alpinelinux/aports/commit/2026e1259422d4e0cf92391ca2d3844356c649d0
+	EXTRA_CFLAGS="-DTHREAD_STACK_SIZE=0x100000" \
 	&& make install \
 	\
 	&& runDeps="$( \
-		scanelf --needed --nobanner --format '%n#p' --recursive /usr/local \
-			| tr ',' '\n' \
-			| sort -u \
-			| awk 'system("[ -e /usr/local/lib/" $1 " ]") == 0 { next } { print "so:" $1 }' \
+	scanelf --needed --nobanner --format '%n#p' --recursive /usr/local \
+	| tr ',' '\n' \
+	| sort -u \
+	| awk 'system("[ -e /usr/local/lib/" $1 " ]") == 0 { next } { print "so:" $1 }' \
 	)" \
 	&& apk add --virtual .python-rundeps $runDeps \
 	&& apk del .build-deps \
 	\
 	&& find /usr/local -depth \
-		\( \
-			\( -type d -a \( -name test -o -name tests \) \) \
-			-o \
-			\( -type f -a \( -name '*.pyc' -o -name '*.pyo' \) \) \
-		\) -exec rm -rf '{}' + \
+	\( \
+	\( -type d -a \( -name test -o -name tests \) \) \
+	-o \
+	\( -type f -a \( -name '*.pyc' -o -name '*.pyo' \) \) \
+	\) -exec rm -rf '{}' + \
 	&& rm -rf /usr/src/python
 
 # if this is called "PIP_VERSION", pip explodes with "ValueError: invalid truth value '<VERSION>'"
@@ -101,18 +103,18 @@ RUN set -ex; \
 	apk del .fetch-deps; \
 	\
 	python get-pip.py \
-		--disable-pip-version-check \
-		--no-cache-dir \
-		"pip==$PYTHON_PIP_VERSION" \
+	--disable-pip-version-check \
+	--no-cache-dir \
+	"pip==$PYTHON_PIP_VERSION" \
 	; \
 	pip --version; \
 	\
 	find /usr/local -depth \
-		\( \
-			\( -type d -a \( -name test -o -name tests \) \) \
-			-o \
-			\( -type f -a \( -name '*.pyc' -o -name '*.pyo' \) \) \
-		\) -exec rm -rf '{}' +; \
+	\( \
+	\( -type d -a \( -name test -o -name tests \) \) \
+	-o \
+	\( -type f -a \( -name '*.pyc' -o -name '*.pyo' \) \) \
+	\) -exec rm -rf '{}' +; \
 	rm -f get-pip.py
 
 CMD ["python2"]
