--- a/requirements.txt
+++ b/requirements.txt
@@ -35,4 +35,4 @@ PyGithub==1.44.1
 enum34==1.1.6
 validators==0.14.2
 deprecated==1.2.10
--e git+https://github.com/goodrain/appstore-sdk-python.git@python3#egg=openapi_client
+-e git+https://gitee.com/rainbond/appstore-sdk-python.git@python3#egg=openapi_client
