--- a/Dockerfile.allinone
+++ b/Dockerfile.allinone
@@ -4,7 +4,7 @@ ARG RELEASE_DESC=
 FROM golang:1.14-stretch as builder
 ENV CGO_ENABLED=1
 ENV GOPATH=/go
-RUN git clone --depth=1 https://github.com/goodrain/cloud-adaptor /go/src/goodrain.com/cloud-adaptor
+RUN git clone -b V5.3 --depth=1 https://github.com/goodrain/cloud-adaptor /go/src/goodrain.com/cloud-adaptor
 WORKDIR /go/src/goodrain.com/cloud-adaptor/
 ARG LDFLAGS
 RUN go build -ldflags "$LDFLAGS" -o /cloud-adaptor
