--- a/.github/workflows/pr-ci-build.yaml
+++ b/.github/workflows/pr-ci-build.yaml
@@ -32,4 +32,4 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOMESTIC_DOCKER_PASSWORD: ${{ secrets.DOMESTIC_DOCKER_PASSWORD }}
           DOMESTIC_DOCKER_USERNAME: ${{ secrets.DOMESTIC_DOCKER_USERNAME }}
-        run: VERSION=${{ steps.extract_branch.outputs.branch }}-dev ./release.sh
+        run: VERSION=${{ github.base_ref }}-dev ./release.sh
