--- a/.github/workflows/commit-ci-build.yml
+++ b/.github/workflows/commit-ci-build.yml
@@ -21,6 +21,13 @@ jobs:
       - name: check-code
         run: ./check_code.sh
 
+      - name: SonarQube Scan
+        uses: kitabisa/sonarqube-action@v1.1.0
+        with:
+          host: ${{ secrets.SONARQUBE_HOST }}
+          login: ${{ secrets.SONARQUBE_TOKEN }}
+          projectName: rainbond-console
+
       - name: Extract branch name
         shell: bash
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
