--- a/.github/workflows/pr-ci-build.yml
+++ b/.github/workflows/pr-ci-build.yml
@@ -21,6 +21,13 @@ jobs:
       - name: check-code
         run: ./check_code.sh
 
+      - name: SonarQube Scan
+        uses: kitabisa/sonarqube-action@v1.1.0
+        with:
+          host: ${{ secrets.SONARQUBE_HOST }}
+          login: ${{ secrets.SONARQUBE_TOKEN }}
+          projectName: rainbond-console
+
       - name: Build the Docker image
         env:
           TRAVIS_PULL_REQUEST: true
