--- a/.github/workflows/release-ci-build.yml
+++ b/.github/workflows/release-ci-build.yml
@@ -19,8 +19,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 yapf==0.26.0
-      - name: check-code
-        run: ./check_code.sh
+#      - name: check-code
+#        run: ./check_code.sh
 
       - name: Build the Docker image
         env:
