--- a/.github/workflows/release-ci-build.yml
+++ b/.github/workflows/release-ci-build.yml
@@ -2,7 +2,7 @@ name: release-ci-build
 
 on:
   release:
-    branches: [new_user_guidance]
+    branches: [master, V5.3, V5.4]
   workflow_dispatch:
 
 jobs:
@@ -19,8 +19,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 yapf==0.26.0
-#      - name: check-code
-#        run: ./check_code.sh
+      - name: check-code
+        run: ./check_code.sh
 
       - name: Build the Docker image
         env:
