--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,7 +7,7 @@ nodaemon=true
 logfile=/app/logs/supervisord.log ;
 pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 childlogdir=/var/log/supervisor            ; ('AUTO' child log dir, default $TEMP)
-
+loglevel=error
 ; the below section must remain in the config file for RPC
 ; (supervisorctl/web interface) to work, additional interfaces may be
 ; added by defining them in separate rpcinterface: sections
