--- a/dind.conf
+++ b/dind.conf
@@ -36,3 +36,9 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stdout_logfile_backups=3
 redirect_stderr=true
+
+
+[program:log]
+command=/usr/bin/log
+user=root
+autostart=true
