--- a/.drone.yml
+++ b/.drone.yml
@@ -59,6 +59,8 @@ steps:
       from_secret: domestic_base_name
     BUILD_VERSION:
       from_secret: build_version
+    DOMESTIC_NAMESPACE:
+      from_secret: domestic_namespace
     GOOS: linux
     GOARCH: arm64
   commands:
