Support specifying UI branches

--- a/.drone.yml
+++ b/.drone.yml
@@ -16,8 +16,11 @@ node:
 steps:
 - name: clone rainbond-ui
   image: alpine/git
+  environment:
+    UI_BRANCH:
+      from_secret: ui_branch
   commands:
-  - git clone https://github.com/goodrain/rainbond-ui.git
+  - git clone -b $UI_BRANCH --depth=1 https://github.com/goodrain/rainbond-ui.git
 
 - name: build rainbond-ui dist
   image: node:12
