--- a/Dockerfile.dind
+++ b/Dockerfile.dind
@@ -107,6 +107,7 @@ ENV CONFIG_DIR=/app/data/cloudadaptor
 ENV HELM_PATH=/usr/local/bin/helm
 ENV MYSQL_DB=console
 ENV VERSION=${VERSION}
+ENV DOMESTIC_NAMESPACE=${DOMESTIC_NAMESPACE}
 
 VOLUME /app/data
 VOLUME /app/logs
