--- a/Dockerfile.dind
+++ b/Dockerfile.dind
@@ -2,7 +2,7 @@ ARG VERSION=V5.4-dev
 
 FROM golang:1.14-stretch as builder
 ARG ADAPTOR_VERSION=v5.6.0-release
-ENV GOPROXY=https://goproxy.io
+ENV GOPROXY=https://goproxy.cn
 ENV CGO_ENABLED=1
 ENV GOPATH=/go
 RUN git clone -b ${ADAPTOR_VERSION} --depth=1  https://ghproxy.com/https://github.com/goodrain/cloud-adaptor /go/src/goodrain.com/cloud-adaptor
