chore: add cluster version environment variable

--- a/Dockerfile.allinone
+++ b/Dockerfile.allinone
@@ -53,6 +53,8 @@ ENV CHART_PATH=/app/chart
 ENV CONFIG_DIR=/app/data/cloudadaptor
 ENV HELM_PATH=/usr/local/bin/helm
 ENV MYSQL_DB=console
+ENV RAINBOND_VERSION=$VERSION
+ENV OPERATOR_VERSION=$VERSION
 
 VOLUME /app/data
 VOLUME /app/logs
