--- a/Dockerfile.dind
+++ b/Dockerfile.dind
@@ -1,5 +1,6 @@
 ARG IMAGE_NAMESPACE=rainbond
 ARG VERSION=V5.4-dev
+
 FROM golang:1.14-stretch as builder
 ARG ADAPTOR_VERSION=v5.6.0-release
 # ENV GOPROXY=https://goproxy.io
@@ -12,10 +13,11 @@ RUN git clone -b ${ADAPTOR_VERSION} --depth=1 https://github.com/goodrain/cloud-
 WORKDIR /go/src/goodrain.com/cloud-adaptor/
 ARG LDFLAGS
 RUN go build -ldflags "$LDFLAGS" -o /cloud-adaptor $PWD/cmd/cloud-adaptor
+
 ARG IMAGE_NAMESPACE=rainbond
 ARG VERSION=V5.4-dev
-FROM ${IMAGE_NAMESPACE}/rainbond-ui:${VERSION}
 
+FROM ${IMAGE_NAMESPACE}/rainbond-ui:${VERSION}
 ARG RELEASE_DESC=
 ARG ARCH=amd64
 ARG BRANCH=v2.3.0
@@ -108,6 +110,8 @@ ENV CONFIG_DIR=/app/data/cloudadaptor
 ENV HELM_PATH=/usr/local/bin/helm
 ENV MYSQL_DB=console
 ENV VERSION=${VERSION}
+ENV RAINBOND_VERSION=${VERSION}
+ENV OPERATOR_VERSION=${VERSION}
 ENV DOMESTIC_NAMESPACE=${DOMESTIC_NAMESPACE}
 
 VOLUME /app/data
