--- a/Dockerfile.dind
+++ b/Dockerfile.dind
@@ -2,14 +2,13 @@ ARG IMAGE_NAMESPACE=rainbond
 ARG VERSION=V5.4-dev
 
 FROM golang:1.14-stretch as builder
-ARG ADAPTOR_VERSION=v5.6.0-release
+ARG VERSION=v5.7.1-release
 # ENV GOPROXY=https://goproxy.io
 ENV CGO_ENABLED=1
 ENV GOPATH=/go
-ENV VERSION=${VERSION}
 ARG DOMESTIC_NAMESPACE=goodrain
 ENV DOMESTIC_NAMESPACE=${DOMESTIC_NAMESPACE}
-RUN git clone -b ${ADAPTOR_VERSION} --depth=1 https://github.com/goodrain/cloud-adaptor /go/src/goodrain.com/cloud-adaptor
+RUN git clone -b ${VERSION} --depth=1 https://github.com/goodrain/cloud-adaptor /go/src/goodrain.com/cloud-adaptor
 WORKDIR /go/src/goodrain.com/cloud-adaptor/
 ARG LDFLAGS
 RUN go build -ldflags "$LDFLAGS" -o /cloud-adaptor $PWD/cmd/cloud-adaptor
